# envoy-dynamic-module-example

./: .gitignore  Cargo.toml  README.md  envoy-config.yaml  otel-collector-config.yaml
.cargo/: config.toml
src/: error.rs  exporter.rs  lib.rs  spanner.rs  telemetry.rs
src/exporter/: direct.rs  envoy.rs
