[package]
name = "envoy-spanner-extension"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Envoy SDK (v1.35 release)
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy.git", rev = "84305a6cb64bd55aaf606bdd53de7cd6080427a1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Google Cloud Spanner
google-cloud-spanner = { version = "1.4", package = "gcloud-spanner" }
gcloud-gax = "1.3"
tonic = "0.14"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Lazy static initialization
once_cell = "1.20"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
