[package]
name = "envoy-spanner-extension"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Envoy SDK (v1.38.3 release, dynamic modules ABI v0.1.0)
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy.git", rev = "0ebfcfe5b0484b89ca85b761da9e05ce75dbda8d" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }

# Google Cloud Spanner
google-cloud-spanner = { version = "1.8.1", package = "gcloud-spanner" }

# OpenTelemetry
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
http-body-util = "0.1.3"
tokio-stream = "0.1.18"
tonic = { version = "0.14.6", default-features = false }
tonic-prost = "0.14.6"

# UUID generation
uuid = { version = "1.23.4", features = ["v4"] }

# Error handling
thiserror = "2.0.18"

# TLS
rustls = { version = "0.23.41", features = ["aws-lc-rs"] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["testing", "trace"] }
prost = "0.14.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
